# rustic-validator

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/api/: api.rs
src/config/: config.rs
src/database/: database.rs
